--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,8 +4,9 @@ const commit: { html_url: string; sha: string } = await fetch('https://api.githu
     .catch(() => {})
 ---
 
-<hr class="my-6 border-gray-600 mx-6" />
-<footer class="mx-6 font-josefin font-bold mb-10 text-gray-500">
-    <p class="text-md">📃 Code under <a href="https://github.com/notgabry/gabryy.me/blob/main/LICENSE" class="decoration-dashed hover:underline">MIT</a> license.</p>
-    <p class="text-md">🍁 GitHub Commit <a class="decoration-dashed hover:underline" href={commit.html_url}>{String(commit.sha || '00000').substring(0, 5)}.</a></p>
+<footer class="bg-black text-white p-2 py-3 w-full mt-10 font-grotesque font-light border-t-2 border-white">
+    <p class="self-center">
+        ⚡ Commit n.
+        <a class="decoration-dashed hover:underline hover:cursor-pointer" href={commit.html_url}>{String(commit.sha || '00000').substring(0, 5)}</a>
+    </p>
 </footer>
