--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -14,6 +14,9 @@
             <li>
                 <a href="/" class="hover:underline hover:text-p-accent">Home</a>
             </li>
+            <li>
+                <a href="/songs" class="hover:underline hover:text-p-accent">Songs</a>
+            </li>
             <!-- In future more pages will be added -->
         </ul>
     </div>
