--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from '@layouts/Layout.astro'
 import Head from '@components/Head.astro'
-import Mark from '@components/Mark.astro'
 import Presence from '@components/Presence.svelte'
 import GenerateDynDate from '@modules/GenerateDynDate'
 
@@ -9,7 +8,7 @@ const age = GenerateDynDate(new Date(2007, 9, 12))
 ---
 
 <Layout title="notgabry">
-    <main class="mt-10 max-w-2xl mx-auto space-y-6 flex-grow px-4">
+    <main class="mt-10 max-w-2xl mx-auto space-y-6 px-4">
         <header class="text-center mb-9">
             <Head description="Hello, world!" links />
         </header>
@@ -17,19 +16,20 @@ const age = GenerateDynDate(new Date(2007, 9, 12))
         <section class="bg-p-card-2 border-2 border-black shadow-neobrutalist p-4">
             <h3 class="text-3xl font-bold">About Me</h3>
             <p>
-                I'm a {age}-year-old developer from Italy. Ever since I was little I've always been passionate about computers and how they operate, now I'm learning new technologies or programming
-                languages, like <Mark>Go</Mark> and <Mark>Rust</Mark> the two programmming languages I love the most.
+                I'm a {age}-year-old developer from Italy. Ever since I was little I've always been passionate about computers and how they operate,
+                now I'm learning new technologies or programming languages, like <strong>Go</strong> and <strong>Rust</strong> the two programmming languages
+                I love the most.
             </p>
         </section>
 
         <section class="bg-p-card-3 border-2 border-black shadow-neobrutalist p-4">
             <h3 class="text-3xl font-bold">Interests</h3>
             <p>
-                I've half a decade of experience with linux, I've tried different linux distros like <Mark>Ubuntu 20</Mark>, <Mark>Manjaro</Mark>, <Mark>Arch</Mark>, <Mark>Kali</Mark> and <Mark
-                    >Linux Mint</Mark
-                > the one I'm using right now.
+                I've half a decade of experience with linux, I've tried different linux distros like <strong>Ubuntu 20</strong>, <strong
+                    >Manjaro</strong
+                >, <strong>Arch</strong>, <strong>Kali</strong> and <strong>Linux Mint</strong> the one I'm using right now.
                 <br />
-                In my spare time when I want to relax I play videogames like <Mark>Valorant</Mark>
+                In my spare time when I want to relax I play videogames like <strong>Valorant</strong>
                 <br />
                 I can't play without music, feel free to check out one of my most recent played songs...
             </p>
@@ -39,8 +39,9 @@ const age = GenerateDynDate(new Date(2007, 9, 12))
         <section class="bg-p-card-5 border-2 border-black shadow-neobrutalist p-4">
             <h3 class="text-3xl font-bold">Skills</h3>
             <p>
-                I've lots of experience with <Mark>JavaScript</Mark> and <Mark>TypeScript</Mark> also I practiced <Mark>Python</Mark> for over a year, I'm recently moving my focus to <Mark>Go</Mark> and
-                <Mark>Rust</Mark>. <br />
+                I've lots of experience with <strong>JavaScript</strong> and <strong>TypeScript</strong> also I practiced <strong>Python</strong> for over
+                a year, I'm recently moving my focus to <strong>Go</strong> and
+                <strong>Rust</strong>. <br />
             </p>
         </section>
     </main>
