--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -13,10 +13,12 @@
     }
 
     ::-moz-selection {
-        background-color: theme('colors.white');
+        background-color: theme('colors.black');
+        color: theme('colors.white');
     }
 
     ::selection {
-        background-color: theme('colors.white');
+        background-color: theme('colors.black');
+        color: theme('colors.white');
     }
 }
