--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,20 +2,20 @@
 
 ---
 
-<nav class="bg-white h-16 w-full flex justify-between px-2 border-b-2 border-black">
+<nav class="h-16 w-full flex justify-between px-4">
     <div class="self-center">
         <a href="/" class="space-x-2">
-            <img class="w-10 hover:animate-spin inline" src="/gabry-icon.png" alt="Gabry's Avatar" />
+            <img class="w-8 hover:animate-spin inline" src="/gabry-icon.png" alt="Gabry's Avatar" />
             <span class="inline hover:underline">notgabry</span>
         </a>
     </div>
     <div>
         <ul class="items-center p-5 flex space-x-4">
             <li>
-                <a href="/" class="hover:underline hover:text-p-accent">Home</a>
+                <a href="/" class="hover:underline">Home</a>
             </li>
             <li>
-                <a href="/songs" class="hover:underline hover:text-p-accent">Songs</a>
+                <a href="/songs" class="hover:underline">Songs</a>
             </li>
             <!-- In future more pages will be added -->
         </ul>
