--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ import '../styles/input.css'
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css" />
     </head>
 
-    <body class="bg-p-bg font-grotesque mb-10">
+    <body class="bg-p-bg font-grotesque mb-10 text-p-text">
         <Navbar />
         <slot />
     </body>
