--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,18 +13,18 @@ const age = GenerateDynDate(new Date(2007, 9, 12))
             <Head description="Hello, world!" links />
         </header>
 
-        <section class="bg-p-card-2 border-2 border-black shadow-neobrutalist p-4">
+        <section class="py-4">
             <h3 class="text-3xl font-bold">About Me</h3>
-            <p>
+            <p class="text-p-secondary">
                 I'm a {age}-year-old developer from Italy. Ever since I was little I've always been passionate about computers and how they operate,
                 now I'm learning new technologies or programming languages, like <strong>Go</strong> and <strong>Rust</strong> the two programmming languages
                 I love the most.
             </p>
         </section>
 
-        <section class="bg-p-card-3 border-2 border-black shadow-neobrutalist p-4">
+        <section class="py-4">
             <h3 class="text-3xl font-bold">Interests</h3>
-            <p>
+            <p class="text-p-secondary">
                 I've half a decade of experience with linux, I've tried different linux distros like <strong>Ubuntu 20</strong>, <strong
                     >Manjaro</strong
                 >, <strong>Arch</strong>, <strong>Kali</strong> and <strong>Linux Mint</strong> the one I'm using right now.
@@ -36,9 +36,9 @@ const age = GenerateDynDate(new Date(2007, 9, 12))
             <Presence client:load />
         </section>
 
-        <section class="bg-p-card-5 border-2 border-black shadow-neobrutalist p-4">
+        <section class="py-4">
             <h3 class="text-3xl font-bold">Skills</h3>
-            <p>
+            <p class="text-p-secondary">
                 I've lots of experience with <strong>JavaScript</strong> and <strong>TypeScript</strong> also I practiced <strong>Python</strong> for over
                 a year, I'm recently moving my focus to <strong>Go</strong> and
                 <strong>Rust</strong>. <br />
