--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -5,20 +5,10 @@
 @layer base {
     ::-webkit-scrollbar {
         width: 5px;
-        background-color: theme('colors.white');
     }
 
     ::-webkit-scrollbar-thumb {
-        background-color: theme('colors.black');
-    }
-
-    ::-moz-selection {
-        background-color: theme('colors.black');
-        color: theme('colors.white');
-    }
-
-    ::selection {
-        background-color: theme('colors.black');
-        color: theme('colors.white');
+        background-color: theme('colors.p.secondary');
+        border-radius: 8px;
     }
 }
