--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,25 +1,42 @@
 ---
+import { Icon } from 'astro-icon/components'
+
 const { description, links } = Astro.props
 ---
 
 <div class="flex flex-col">
-    <h1 class="text-4xl font-bold text-center">notgabry</h1>
-    <p class="text-lg rounded inline-block px-2 italic text-p-secondary">{description}</p>
+    <h1 class="text-4xl font-bold">notgabry</h1>
+    <p class="text-lg rounded inline-block italic text-p-secondary">{description}</p>
 
     {
         links && (
-            <div class="pt-2 text-center space-x-6">
-                <a href="https://inertiah.uno/github" target="_blank" class="px-2 cursor-pointer inline-block my-2">
-                    <i class="fa-brands fa-github" />
+            <div class="pt-2 space-x-4">
+                <a
+                    href="https://inertiah.uno/github"
+                    target="_blank"
+                    class="text-xl inline-block bg-p-accent hover:bg-p-accent-2 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-p-accent-2 p-2">
+                    <Icon name="mdi:github" />
                 </a>
-                <a href="https://inertiah.uno/x" target="_blank" class="px-2 cursor-pointer inline-block my-2">
-                    <i class="fa-brands fa-x-twitter" />
+
+                <a
+                    href="https://inertiah.uno/x"
+                    target="_blank"
+                    class="text-xl inline-block bg-p-accent hover:bg-p-accent-2 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-p-accent-2 p-2">
+                    <Icon name="mdi:twitter" />
                 </a>
-                <a href="https://inertiah.uno/discord" target="_blank" class="px-2 cursor-pointer inline-block my-2">
-                    <i class="fa-brands fa-discord" />
+
+                <a
+                    href="https://inertiah.uno/discord"
+                    target="_blank"
+                    class="text-xl inline-block bg-p-accent hover:bg-p-accent-2 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-p-accent-2 p-2">
+                    <Icon name="ic:round-discord" />
                 </a>
-                <a href="mailto:inbox@gabryy.me" target="_blank" class="px-2 cursor-pointer inline-block my-2">
-                    <i class="fa-solid fa-envelope" />
+
+                <a
+                    href="mailto:inbox@gabryy.me"
+                    target="_blank"
+                    class="text-xl inline-block bg-p-accent hover:bg-p-accent-2 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-p-accent-2 p-2">
+                    <Icon name="mdi:envelope" />
                 </a>
             </div>
         )
