--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const age = GenerateDynDate(new Date(2007, 9, 12))
 
 <Layout title="notgabry">
     <main class="mt-10 max-w-2xl mx-auto space-y-6 px-4">
-        <header class="text-center mb-9">
+        <header class="mb-9 text-center">
             <Head description="Hello, world!" links />
         </header>
 
