--- a/src/pages/songs.astro
+++ b/src/pages/songs.astro
@@ -2,6 +2,8 @@
 import Layout from '@layouts/Layout.astro'
 import Card from '@components/Card.astro'
 import LastFmAPI from '@modules/Lastfm'
+import Head from '@components/Head.astro'
+
 import type { Lastfm } from '@modules/Spotify'
 
 const config = new URL(Astro.url)
@@ -47,9 +49,11 @@ const recent = await LastFmAPI<Lastfm>({ user, isOverall: true, method: 'user.ge
 ---
 
 <Layout title="notgabry">
-    <main class="mt-10 max-w-5xl mx-auto space-y-12 px-4">
+    <main class="mt-10 max-w-5xl mx-auto space-y-10 px-4">
+        <Head description="My latest activity on Spotify" />
+
         <section class="w-full h-auto">
-            <h1 class="text-2xl font-bold">Recent Songs</h1>
+            <h1 class="text-xl font-bold">Recent Songs</h1>
 
             <div class="grid gap-x-4 gap-y-4 md:grid-cols-2 pt-3">
                 {
@@ -61,7 +65,7 @@ const recent = await LastFmAPI<Lastfm>({ user, isOverall: true, method: 'user.ge
         </section>
 
         <section class="w-full h-auto">
-            <h1 class="text-2xl font-bold">Top Artists</h1>
+            <h1 class="text-xl font-bold">Top Artists</h1>
 
             <div class="grid gap-x-4 gap-y-4 md:grid-cols-2 pt-3">
                 {
@@ -73,7 +77,7 @@ const recent = await LastFmAPI<Lastfm>({ user, isOverall: true, method: 'user.ge
         </section>
 
         <section class="w-full h-auto">
-            <h1 class="text-2xl font-bold">Top Songs</h1>
+            <h1 class="text-xl font-bold">Top Songs</h1>
 
             <div class="grid gap-x-4 gap-y-4 md:grid-cols-2 pt-3">
                 {
