--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -14,6 +14,7 @@ const { description, links } = Astro.props
                 <a
                     href="https://inertiah.uno/github"
                     target="_blank"
+                    aria-label="GitHub Profile"
                     class="text-xl inline-block bg-p-accent hover:bg-p-accent-2 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-p-accent-2 p-2">
                     <Icon name="mdi:github" />
                 </a>
@@ -21,6 +22,7 @@ const { description, links } = Astro.props
                 <a
                     href="https://inertiah.uno/x"
                     target="_blank"
+                    aria-label="Twitter Profile"
                     class="text-xl inline-block bg-p-accent hover:bg-p-accent-2 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-p-accent-2 p-2">
                     <Icon name="mdi:twitter" />
                 </a>
@@ -28,6 +30,7 @@ const { description, links } = Astro.props
                 <a
                     href="https://inertiah.uno/discord"
                     target="_blank"
+                    aria-label="Discord Profile"
                     class="text-xl inline-block bg-p-accent hover:bg-p-accent-2 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-p-accent-2 p-2">
                     <Icon name="ic:round-discord" />
                 </a>
@@ -35,6 +38,7 @@ const { description, links } = Astro.props
                 <a
                     href="mailto:inbox@gabryy.me"
                     target="_blank"
+                    aria-label="Mail Me!"
                     class="text-xl inline-block bg-p-accent hover:bg-p-accent-2 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-p-accent-2 p-2">
                     <Icon name="mdi:envelope" />
                 </a>
