--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,8 @@ import '../styles/input.css'
         <link rel="shortcut icon" href="/gabry-icon.png" />
 
         <meta property="og:title" content="NotGabry" />
-        <meta property="og:description" content="Modern Minimal ❤" />
+        <meta property="og:description" content="Modern & Minimal ❤" />
+        <meta property="description" content="Modern & Minimal ❤" />
         <meta property="theme-color" content="#A9A7F1" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
