--- a/src/pages/tech.astro
+++ b/src/pages/tech.astro
@@ -173,6 +173,41 @@ const page = [
                 url: 'https://www.microsoft.com/windows'
             }
         ]
+    },
+    {
+        name: 'Databases',
+        boxes: [
+            {
+                name: 'MariaDB',
+                icon: 'vscode-icons:file-type-mariadb',
+                url: 'https://mariadb.org/'
+            },
+            {
+                name: 'MySQL',
+                icon: 'devicon:mysql',
+                url: 'https://mysql.com'
+            },
+            {
+                name: 'SQLite',
+                icon: 'devicon:sqlite',
+                url: 'https://sqlite.org/'
+            },
+            {
+                name: 'PostgreSQL',
+                icon: 'devicon:postgresql',
+                url: 'https://postgresql.org'
+            },
+            {
+                name: 'Redis',
+                icon: 'devicon:redis',
+                url: 'https://redis.io/'
+            },
+            {
+                name: 'MongoDB',
+                icon: 'devicon:mongodb',
+                url: 'https://mongodb.com/'
+            }
+        ]
     }
 ]
 ---
