--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,9 +9,9 @@ const age = GenerateDynDate(new Date(2007, 9, 12))
 
 <Layout title="notgabry">
     <main class="mt-10 max-w-2xl mx-auto space-y-6 px-4">
-        <header class="mb-9 text-center">
+        <section class="mb-9 text-center">
             <Head description="Hello, world!" links />
-        </header>
+        </section>
 
         <section class="py-4">
             <h2 class="text-3xl font-bold">About Me</h2>
