fix: removing fonts

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -36,7 +36,7 @@ const { description, links } = Astro.props
                 </a>
 
                 <a
-                    href="mailto:inbox@gabryy.me"
+                    href="mailto:notgdev@proton.me"
                     target="_blank"
                     aria-label="Mail Me!"
                     class="text-xl inline-block bg-p-accent hover:bg-p-accent-2 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-p-accent-2 p-2">
