--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,7 +7,7 @@ import { Icon } from 'astro-icon/components'
     <div class="flex justify-between h-16 px-4">
         <a href="/" class="space-x-2 self-center">
             <img class="hover:animate-spin inline" width="32" height="32" src="/gabry-icon.png" alt="Gabry's Avatar" />
-            <span class="hover:underline inline">notgabry</span>
+            <span class="hover:underline inline font-medium">notgabry</span>
         </a>
 
         <div
