--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,13 +21,9 @@ import '../styles/input.css'
 
         <link rel="icon" href="/gabry-icon.png" />
         <link rel="shortcut icon" href="/gabry-icon.png" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap" rel="stylesheet" />
-        <script src="https://cdn.jsdelivr.net/npm/iconify-icon@2.1.0/dist/iconify-icon.min.js"></script>
     </head>
 
-    <body class="bg-p-bg font-grotesque mb-16 text-p-text">
+    <body class="bg-p-bg mb-16 text-p-text">
         <header>
             <Navbar />
         </header>
