fix: removing google fonts, spotify card, context menu

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,15 +4,15 @@ import { Icon } from 'astro-icon/components'
 ---
 
 <Astronav closeOnClick>
-    <div class="flex justify-between h-16 px-4">
-        <a href="/" class="space-x-2 self-center">
+    <div class="flex justify-between h-16 px-4 items-center">
+        <a href="/" class="space-x-2">
             <img class="hover:animate-spin inline" width="32" height="32" src="/gabry-icon.png" alt="Gabry's Avatar" />
             <span class="hover:underline inline font-medium">notgabry</span>
         </a>
 
-        <div
-            class="bg-p-accent ring-p-accent-2 flex p-1 ring-1 rounded-md text-2xl self-center hover:bg-p-accent-2 transition-all hover:ease-out duration-500">
-            <MenuIcon>
+        <MenuIcon>
+            <div
+                class="bg-neutral-850 ring-neutral-800 p-1 ring-1 rounded-md text-2xl hover:bg-neutral-800 transition-all hover:ease-out duration-500">
                 <OpenIcon>
                     <Icon name="ci:menu-alt-05" />
                 </OpenIcon>
@@ -20,20 +20,23 @@ import { Icon } from 'astro-icon/components'
                 <CloseIcon>
                     <Icon name="ci:menu-alt-05" />
                 </CloseIcon>
-            </MenuIcon>
-        </div>
+            </div>
+        </MenuIcon>
     </div>
 
-    <MenuItems class="bg-p-accent absolute right-8 ring-1 ring-p-accent-2 rounded-md py-2 px-2 hidden">
+    <MenuItems class="bg-neutral-850 absolute right-4 ring-1 ring-neutral-800 rounded-md py-2 px-2 hidden">
         <ul>
             <li>
-                <a href="/" class="hover:bg-p-bg py-1 px-2 rounded-md w-full inline-block transition-all hover:ease duration-300">Home</a>
+                <a href="/" class="hover:bg-neutral-900 py-1 px-2 rounded-md w-full inline-block transition-all hover:ease duration-300">Home</a>
             </li>
             <li>
-                <a href="/tech" class="hover:bg-p-bg py-1 px-2 rounded-md w-full inline-block transition-all hover:ease duration-300">Technologies</a>
+                <a href="/tech" class="hover:bg-neutral-900 py-1 px-2 rounded-md w-full inline-block transition-all hover:ease duration-300"
+                    >Technologies</a
+                >
             </li>
             <li>
-                <a href="/songs" class="hover:bg-p-bg py-1 px-2 rounded-md w-full inline-block transition-all hover:ease duration-300">Songs</a>
+                <a href="/songs" class="hover:bg-neutral-900 py-1 px-2 rounded-md w-full inline-block transition-all hover:ease duration-300">Songs</a
+                >
             </li>
         </ul>
     </MenuItems>
