--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const age = GenerateDynDate(new Date(2007, 9, 12))
 
         <section class="py-4">
             <h2 class="text-3xl font-bold">About Me</h2>
-            <p class="text-p-secondary">
+            <p class="text-zinc-400">
                 I'm a {age}-year-old developer from Italy. Ever since I was little I've always been passionate about computers and how they operate,
                 now I'm learning new technologies or programming languages, like <strong>Go</strong> and <strong>Rust</strong> the two programmming languages
                 I love the most.
@@ -24,7 +24,7 @@ const age = GenerateDynDate(new Date(2007, 9, 12))
 
         <section class="py-4">
             <h2 class="text-3xl font-bold">Interests</h2>
-            <p class="text-p-secondary">
+            <p class="text-zinc-400">
                 I've half a decade of experience with linux, I've tried different linux distros like <strong>Ubuntu 20</strong>, <strong
                     >Manjaro</strong
                 >, <strong>Arch</strong>, <strong>Kali</strong> and <strong>Linux Mint</strong> the one I'm using right now.
@@ -38,7 +38,7 @@ const age = GenerateDynDate(new Date(2007, 9, 12))
 
         <section class="py-4">
             <h2 class="text-3xl font-bold">Skills</h2>
-            <p class="text-p-secondary">
+            <p class="text-zinc-400">
                 I've lots of experience with <strong>JavaScript</strong> and <strong>TypeScript</strong> also I practiced <strong>Python</strong> for over
                 a year, I'm recently moving my focus to <strong>Go</strong> and
                 <strong>Rust</strong>. <br />
