--- a/src/components/Box.astro
+++ b/src/components/Box.astro
@@ -5,7 +5,7 @@ const { icon, name, url } = Astro.props
 ---
 
 <div
-    class="group bg-p-accent ring-1 ring-p-accent-2 rounded-md flex items-center space-x-2 px-4 py-2 hover:bg-p-accent-2 transition-all hover:ease-in-out duration-500">
+    class="group bg-neutral-850 ring-1 ring-neutral-800 rounded-md flex items-center space-x-2 px-4 py-2 hover:bg-neutral-800 transition-all hover:ease-in-out duration-500">
     <Icon name={icon} is:inline={true} class="text-xl" />
     <a class="text-md truncate group-hover:underline" href={url}>{name}</a>
 </div>
