--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -6,7 +6,7 @@ const { description, links } = Astro.props
 
 <div class="flex flex-col">
     <h1 class="text-4xl font-bold">notgabry</h1>
-    <p class="text-lg rounded inline-block italic text-p-secondary">{description}</p>
+    <p class="text-lg rounded inline-block italic text-zinc-400">{description}</p>
 
     {
         links && (
@@ -15,7 +15,7 @@ const { description, links } = Astro.props
                     href="https://inertiah.uno/github"
                     target="_blank"
                     aria-label="GitHub Profile"
-                    class="text-xl inline-block bg-p-accent hover:bg-p-accent-2 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-p-accent-2 p-2">
+                    class="text-xl inline-block bg-neutral-850 hover:bg-neutral-800 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-neutral-800 p-2">
                     <Icon name="mdi:github" />
                 </a>
 
@@ -23,7 +23,7 @@ const { description, links } = Astro.props
                     href="https://inertiah.uno/x"
                     target="_blank"
                     aria-label="Twitter Profile"
-                    class="text-xl inline-block bg-p-accent hover:bg-p-accent-2 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-p-accent-2 p-2">
+                    class="text-xl inline-block bg-neutral-850 hover:bg-neutral-800 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-neutral-800 p-2">
                     <Icon name="mdi:twitter" />
                 </a>
 
@@ -31,7 +31,7 @@ const { description, links } = Astro.props
                     href="https://inertiah.uno/discord"
                     target="_blank"
                     aria-label="Discord Profile"
-                    class="text-xl inline-block bg-p-accent hover:bg-p-accent-2 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-p-accent-2 p-2">
+                    class="text-xl inline-block bg-neutral-850 hover:bg-neutral-800 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-neutral-800 p-2">
                     <Icon name="ic:round-discord" />
                 </a>
 
@@ -39,7 +39,7 @@ const { description, links } = Astro.props
                     href="mailto:notgdev@proton.me"
                     target="_blank"
                     aria-label="Mail Me!"
-                    class="text-xl inline-block bg-p-accent hover:bg-p-accent-2 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-p-accent-2 p-2">
+                    class="text-xl inline-block bg-neutral-850 hover:bg-neutral-800 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-neutral-800 p-2">
                     <Icon name="mdi:envelope" />
                 </a>
             </div>
