--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,13 @@
 ---
+import '@fontsource-variable/bricolage-grotesque'
+import '../styles/input.css'
+
 const { title } = Astro.props
 import Navbar from '@components/Navbar.astro'
-
-import '../styles/input.css'
 ---
 
 <!doctype html>
-<html lang="en" transition:animate="slide">
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <title>{title}</title>
@@ -21,9 +22,11 @@ import '../styles/input.css'
 
         <link rel="icon" href="/gabry-icon.png" />
         <link rel="shortcut icon" href="/gabry-icon.png" />
+
+        <link rel="sitemap" href="/sitemap-index.xml" />
     </head>
 
-    <body class="bg-p-bg mb-16 text-p-text">
+    <body class="bg-neutral-900 mb-16 text-gray-200 font-grotesque">
         <header>
             <Navbar />
         </header>
